    as "off" and in normal mode of the "debug" flag was "on".

    Corrected a bug in the processing of compiler options when recursively
    calling the logtalk_load/2 and logtalk_compile/2 built-in predicates with
    a list of source files which could result in failure to apply the compiler
    options to the compilation of all files.

    Added goal_expansion/2 clauses to the SWI-Prolog and YAP config files in
    order to allow calling the Prolog built-in predicates phrase/2-3 with a
    Object::GrammarRuleBody in the first argument.

    Corrected the definitions of the predicates '$lgt_current_date'/3 and
    '$lgt_current_time'/3 in the Qu-Prolog config file and rename it to
    "qp.pl". Updated the minimum required version to 8.11 and changed the
    value of the Logtalk flag "prolog_dialect" from "qu" to "qp" in order
    to match the value of the new Prolog flag "dialect" implemented in
    Qu-Prolog 8.11. Added support for the "smart_compilation" compiler flag.
    Improved startup time when using the "qplgt.sh" integration script. 

    Corrected a typo in the template of the predicate subsumes/2 in the
    library protocol "termp".

    Added man pages for the POSIX "*lgt" Prolog integration shell scripts,
    for the Logtalk management shell scripts, and for the XML documenting
    files processing scripts.

    Renamed the "logtalk_select" shell script to "logtalk_version_select".
    Renamed the "cplgtdirs.*" scripts to "logtalk_user_setup.*".

    Improved the "examples/tester.sh" script in order to support running the
    example unit tests compiled in debug mode.

    Added a a simple maze search problem using a depth-first strategy with
    loop detection to the "benchmarks" example.

    Added missing support for syntax coloring of the "complements" entity
    relation to Pygments.


2.39.2 - May 4, 2010

    Changed the internal representation of most entity properties to use a